--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
 PORT=4001
-MongoDBURI="mongodb://localhost:27017/Codestream"
+MongoDBURI="mongodb+srv://abhigyanshr2122:abhigyan1234@cluster0.qaaubik.mongodb.net/"
 NODE_ENV = production
